unpackaged/objects/Enrolled_Module__c.object
<CustomObject>
    <fields>
        <fullName>Class_Section__c</fullName>
        <label>Class Section</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Student_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mod_Credits__c</fullName>
        <label>Modular Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Code__c</fullName>
        <label>Module Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Enrolled Module</label>
    <nameField>
        <displayFormat>EM-{0000000000}</displayFormat>
        <label>Enrolled Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolled Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>